# web-scrape-ethics-check

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample.txt
src/web_scrape_ethics_check/: __init__.py  __main__.py  cli.py  core.py  models.py  rules.py
tests/: test_web_scrape_ethics_check.py
